assets/optional/metrics-server/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: Expose the metrics-server web server on port 443. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: metrics-server-tls
  labels:
    app.kubernetes.io/component: metrics-server
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/part-of: openshift-monitoring
  name: metrics-server
  namespace: openshift-monitoring
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/part-of: openshift-monitoring
