assets/optional/metrics-server/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: openshift-monitoring
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: metrics-server-tls
  labels:
    app.kubernetes.io/name: metrics-server
spec:
  selector:
    app.kubernetes.io/name: metrics-server
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
